2008-01-13  Bruno Haible  <bruno@clisp.org>

	Make it work on OpenBSD 4.0 x86 with address space randomization.
	* lispbibl.d (ADDRESS_RANGE_RANDOMIZED): New macro.
	(LINUX_NOEXEC_HEAPCODES/STANDARD_HEAPCODES, TRIVIALMAP_MEMORY): Depend
	on it.

2008-01-13  Bruno Haible  <bruno@clisp.org>

	* spvw_memfile.d (loadmem_from_handle) [SPVW_MIXED_BLOCKS_OPPOSITE]:
	Fix the test whether there's enough room.

2008-01-13  Bruno Haible  <bruno@clisp.org>

	* makemake.in: Don't use $(MAKE) -C.

2008-01-13  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (STACK_start): declare new per_thread
	* spvw.d (STACK_start): create and ...
	(init_memory): init to the initial value of STACK
	* spvw_debug.d (nobject_out1): use STACK_start to print
	framepointers and framepointerp to check for them
	* io.d (pr_framepointer_1): new function: print frame offset from
	STACK_start instead of its address
	(pr_framepointer): use it instead of pr_hex6

2008-01-13  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (per_thread): per-thread storage class
	* spvw.d, lispbibl.d (STACK, callback_saved_registers)
	(saved_mv_count, saved_value1, saved_back_trace, saved_STACK)
	(SP_bound, STACK_bound, mv_count, mv_space, temp_mv_count)
	(temp_value1, back_trace, aktenv, unwind_protect_to_save)
	(handler_args, inactive_handlers): use per-thread instead of
	current_thread() fields

2008-01-12  Sam Steingold  <sds@gnu.org>

	* makemake.in: use add traling #\/ to gllib in "find" so that
	gllib can be a symlink

2008-01-12  Sam Steingold  <sds@gnu.org>

	* xthread.d: disable spin locks (gcc barfs)
	* constsym.d, subr.d, subrkw.d, threads.lisp, zthread.d:
	rename thread functions from PROCESS to THREAD
	* lispbibl.d (Rectype_Thread, Rectype_Mutex, Rectype_Exemption)
	[MULTITHREAD]: add Rectypes
	(Thread, Mutex, Exemption) [MULTITHREAD]: add types
	(TheThread, TheMutex, TheExemption) [MULTITHREAD]: add macros
	(allocate_thread, allocate_mutex, allocate_exemption)
	[MULTITHREAD]: add declarations